--- a/presentation.tex
+++ b/presentation.tex
@@ -268,7 +268,7 @@
 \begin{frame}[fragile]\frametitle{The Radon-Nikodym property}
   \begin{itemize}
   \item An \textbf{RNP-Banach space} $B$:
-    any Lipschitz $f:\real\to B$ is differentiable $\mu$-a.e; $c_0$,
+    any Lipschitz $f:\real\to B$ is differentiable $\hmeas 1.$-a.e; $c_0$,
     $l^p$ ($1\le p<\infty$), $L^p([0,1])$ ($1<p<\infty$)
   \item Cheeger \& Kleiner (2009): ``Differentiability of Lipschitz
     maps from metric
@@ -392,8 +392,6 @@
     \item Classify $p$ : $f:X\to L^p$ is differentiable, $p=3$ is
       critical.
     \item The examples have analytic dimension $3$, lower to $1$.
-    \item Answer a question of Lang-Plaut: a doubling subset of $l^2$
-      not embeddable in finite-dimensional Euclidean spaces.
   \end{itemize}
 \end{frame}
 \end{document}
