--- a/presentation.tex
+++ b/presentation.tex
@@ -268,7 +268,7 @@
 \begin{frame}[fragile]\frametitle{The Radon-Nikodym property}
   \begin{itemize}
   \item An \textbf{RNP-Banach space} $B$:
-    any Lipschitz $f:\real\to B$ is differentiable $\hmeas 1.$-a.e; $c_0$,
+    any Lipschitz $f:\real\to B$ is differentiable $\hmeas 1.$-a.e;
     $l^p$ ($1\le p<\infty$), $L^p([0,1])$ ($1<p<\infty$)
   \item Cheeger \& Kleiner (2009): ``Differentiability of Lipschitz
     maps from metric
